<resources>
    <string name="app_name">Lets Play</string>

    <string name="games">Games</string>
    <string name="expansions">Expansions</string>
    <string name="game">Game</string>
    <string name="expansion">Expansion</string>
    <string name="all">All</string>
    <string name="collection">Collection: %s</string>
    <string name="game_time">Game time (in minutes):</string>
    <string name="max_game_time">Maximum game time (in minutes):</string>
    <string name="number_of_players">Number of players:</string>
    <string name="recommended_for_more_players">Recommended for more players</string>
    <string name="playable_with_less_players">Playable with smaller number of players</string>
    <string name="min_age">Minimal age:</string>
    <string name="over_20">20+</string>
    <string name="over_2h">2h+</string>
    <string name="none">None</string>
    <string name="select_parent_game">Select parent game</string>
    <string name="parent_game">Parent game: %s</string>
    <string name="confirm_delete_title">Confirm delete...</string>
    <string name="confirm_delete_message">Are you sure you want to delete this game from your collection?</string>
    <string name="confirm_adding_dublicate">You already own a game with the same name. Are you sure you want to use it?</string>
    <string name="select_random">Select random</string>
    <string name="selected_random_game">Your game for today!</string>

    <string name="owned_expansions_value"><![CDATA[<b>Owned expansions:</b> %s]]></string>
    <string name="parent_game_value"><![CDATA[<b>Parent game:</b> %s]]></string>
    <string name="number_of_players_value"><![CDATA[<b>Number of players:</b> %d - %d]]></string>
    <string name="equal_number_of_players_value"><![CDATA[<b>Number of players:</b> %d]]></string>
    <string name="recommended_for_more_players_value">Game is recommended for more players</string>
    <string name="large_number_of_players_value"><![CDATA[<b>Number of players:</b> %d - 20 or more]]></string>
    <string name="playtime_value"><![CDATA[<b>Game time:</b> %d min - %d min]]></string>
    <string name="long_playtime"><![CDATA[<b>Game time:</b>  %d min - 120 min or more]]></string>
    <string name="equal_playtime_value"><![CDATA[<b>Game time:</b> %d min]]></string>
    <string name="equal_long_playtime"><![CDATA[<b>Game time:</b>  120 min or more]]></string>
    <string name="min_age_value"><![CDATA[<b>Minimal age:</b> %d]]></string>
    <string name="bgg_hyperlink" translatable="false"><![CDATA[<a href="https://boardgamegeek.com/boardgame/%s">%s | Board Game | BoardGameGeek</a>]]></string>

    <string name="game_cover">Game cover</string>
    <string name="game_name">Name</string>
    <string name="loading_icon">Loading icon</string>
    <string name="increase_minimal_age">Increase minimal age</string>
    <string name="decrease_minimal_age">Decrease minimal age</string>
    <string name="title">Title</string>
    <string name="edit_game_cover">Edit game cover</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string name="add_game">Add game</string>
    <string name="provide_game_name">Provide game name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="rename">Change name</string>
    <string name="select_game">Select game</string>
    <string name="skip">Skip</string>
    <string name="provide_cover_picture_url">Provide cover picture url</string>
    <string name="picture_url">URL</string>
    <string name="filter">Filter</string>
    <string name="filter_games">Filter games</string>
    <string name="exclude_games_recommended_for_more_players">Exclude games recommended for more players</string>
    <string name="share_list">Share</string>
    <string name="games_we_can_play">"We can play one of these games: "</string>

    <string name="local_username">Default</string>
    <string name="user_name">Username</string>
    <string name="add_new">Add new BGG collection</string>
    <string name="select_collection_owner">Select collection</string>
    <string name="default_collection">Local collection</string>
    <string name="user_already_exists">User has been already added to collection</string>
    <string name="custom_name_hint">Custom name</string>
    <string name="set_as_default_collection">Set as default collection</string>
    <string name="local_collection">Local collection</string>
    <string name="new_user_success">"User %s added to friends list"</string>
    <string name="user_not_found">User not found</string>

    <string name="info">Information</string>
    <string name="version_number">Version number: %s</string>

</resources>